# gm-ai-hub-installable

./: .env.example  .gitignore  BACKLOGS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GRATITUDE.md  LICENSE  README.md  USER_STORY.md  WALKTHROUGH.md  pyproject.toml
.claude/: settings.json
.claude/agent-memory/ux-polish-designer/: MEMORY.md  patterns.md
.claude/agents/: ux-polish-designer.md
backend/: config.py  main.py  paths.py
backend/ai/: client.py  dspy_config.py  guards.py  model_profiles.py  model_registry.py
backend/ai/optimization/: auto_dataset.py  metrics.py  miprov2_runner.py  scheduler.py
backend/ai/pipelines/: __init__.py  complaint_pipeline.py  docent_pipeline.py  draft_pipeline.py  gianmun_pipeline.py  meeting_pipeline.py  task_order_pipeline.py
backend/ai/signatures/: docent_sigs.py  document_sigs.py
backend/api/: chat.py  complaint.py  diff.py  documents.py  draft.py  filesystem.py  gianmun.py  health.py  meeting.py  models.py  optimize.py  pii.py  regulation.py  router.py  samples.py  search.py  settings_api.py  setup_wizard.py  task_order.py
backend/db/: database.py
backend/db/migrations/: 001_initial.sql  002_models_and_optimization.sql  003_app_settings.sql  004_regulations_seed.sql  005_regulations_seed2.sql  006_regulations_gwangmyeong.sql  007_chat_history.sql  008_chat_images.sql
backend/models/: budget.py  document.py  draft.py  gianmun.py  social_economy.py  timeline.py
backend/services/: diff_service.py  document_service.py  hwpx_service.py  index_service.py  law_api_service.py  md_to_owpml.py  pii_service.py  sample_extract_service.py  search_service.py  stt_service.py  watcher_service.py  web_fetch_service.py
data/examples/: complaint_examples.json  docent_examples.json  gianmun_examples.json  meeting_examples.json
data/regulations/: _extracted.txt
data/templates/: __init__.py  template_registry.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  main.jsx
frontend/src/components/: AnnotatedPreview.jsx  ConfirmModal.jsx  FileTable.jsx  FolderPicker.jsx  GuardSummaryBar.jsx  HwpxPreview.jsx  LoadingSpinner.jsx  Modal.jsx  ModelSelector.jsx  PiiHeatmapPreview.jsx  PiiSummaryBar.jsx  SampleManager.jsx  Sidebar.jsx  ThinkingPanel.jsx  (+3 more)
installer/: gm-ai-hub.iss  license_ko.txt
launcher/: tray.py
scripts/: build_frontend.sh  gen_gwangmyeong_sql.py  index_regulations.py  install_govpc.bat  prepare_usb.sh  test_hwpx_clone.py  verify_setup.py
tests/: test_ai_guards.py  test_hwpx.py  test_md_to_owpml.py  test_md_to_owpml_fixes.py  test_models.py  test_paths.py  test_pii.py  test_web_fetch.py
(+27 files in other folders)
